chore: The minimum password length is now 6 characters + gender is man as default
