# server/swagger/swagger_autogen.json
@@ -40,7 +40,7 @@
                   "name": "John",
                   "surname": "Doe",
                   "gender": "man",
-                  "phone": "+380123456789",
+                  "phone": "0123456789",
                   "password": "123456789",
                   "email": "john.doe@example.com",
                   "floor": 5,
@@ -53,7 +53,7 @@
                   "name": "Jane",
                   "surname": "Smith",
                   "gender": "woman",
-                  "phone": "+380987654321",
+                  "phone": "0987654321",
                   "password": "123456789",
                   "email": "jane.smith@example.com",
                   "floor": 2,
@@ -96,7 +96,7 @@
                 },
                 "phone": {
                   "type": "string",
-                  "example": "+380123456789"
+                  "example": "0123456789"
                 },
                 "password": {
                   "type": "string",
@@ -129,7 +129,6 @@
               },
               "required": [
                 "name",
-                "gender",
                 "phone",
                 "password",
                 "repeatPassword",
@@ -163,7 +162,7 @@
                 },
                 "phone": {
                   "type": "string",
-                  "example": "+380123456789"
+                  "example": "0123456789"
                 },
                 "password": {
                   "type": "string",
@@ -241,7 +240,7 @@
                 },
                 "phone": {
                   "type": "string",
-                  "example": "+380123456789"
+                  "example": "0123456789"
                 },
                 "password": {
                   "type": "string",
@@ -313,7 +312,7 @@
                 },
                 "phone": {
                   "type": "string",
-                  "example": "+380123456789"
+                  "example": "0123456789"
                 },
                 "password": {
                   "type": "string",
@@ -347,7 +346,6 @@
               "required": [
                 "id",
                 "name",
-                "gender",
                 "phone",
                 "password",
                 "repeatPassword",
@@ -381,7 +379,7 @@
                 },
                 "phone": {
                   "type": "string",
-                  "example": "+380987654321"
+                  "example": "0987654321"
                 },
                 "password": {
                   "type": "string",
